--- a/proyectos.html
+++ b/proyectos.html
@@ -1,39 +1,72 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyectos</title>
-    <link rel="stylesheet" href="proyectos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Proyectos</title>
+  <link rel="stylesheet" href="proyectos.css">
+  <script src="proyectos.js" defer></script>
 </head>
 
-<a href="Inicio.html" class="btn-volver">⬅ Volver</a>
+<body>
+  <a href="index.html" class="btn-volver">⬅ Volver</a>
 
-<section id="proyectos" class="proyectos">
-  <h2>Mis Proyectos</h2>
+  <section id="proyectos" class="proyectos">
+    <h2>Mis Proyectos</h2>
 
-  <div class="marcos">
-    <div class="marco">
-        <a href="https://docs.google.com/document/d/1GnVsglfyZ5XAXVjdauLHE7FfcqMo8pSxXnW5cO0uxmA/edit?usp=drive_link">
-      <img src="img/shovelFrame.jpg">
-      </a>
-      <p>TDR</p>
+    <!-- FILTROS -->
+    <div class="filtros">
+      <button class="filtro-btn active" data-filter="all">Todos</button>
+      <button class="filtro-btn" data-filter="movil">Proyectos móviles</button>
+      <button class="filtro-btn" data-filter="web">Proyectos web</button>
+      <button class="filtro-btn" data-filter="personal">Personales</button>
     </div>
-    <div class="marco">
+
+    <div class="marcos">
+      <!-- WEB -->
+      <div class="marco" data-category="web">
+        <a href="index.html">
+          <img src="img/shovelFrame.jpg" alt="Portapapeles personal">
+        </a>
+        <p>Portapapeles personal</p>
+      </div>
+
+      <!-- WEB -->
+      <div class="marco" data-category="web">
         <a href="Pagina Diaria LMSGI/index.html">
-      <img src="img/swordFrame.jpg">
-      </a>
-      <p>Página de uso diario</p>
-    </div>
-    <div class="marco">
-        <a href="Inicio.html">
-      <img src="img/frameHoe.jpg">
-      </a>
-      <p>portapapeles personal</p>
+          <img src="img/shovelFrame.jpg" alt="Página de uso diario">
+        </a>
+        <p>Página de uso diario</p>
+      </div>
+
+      <!-- PERSONAL -->
+      <div class="marco" data-category="personal">
+        <a href="https://docs.google.com/document/d/1GnVsglfyZ5XAXVjdauLHE7FfcqMo8pSxXnW5cO0uxmA/edit?usp=drive_link">
+          <img src="img/frameHoe.jpg" alt="TDR">
+        </a>
+        <p>TDR</p>
+      </div>
+
+
+      <!-- Movil -->
+      <div class="marco" data-category="movil">
+        <a href="https://github.com/arturBaigesCortes/AndroidLlistaCompra">
+          <img src="img/swordFrame.jpg" alt="App móvil">
+        </a>
+        <p>To do list</p>
+      </div>
       
+
+      <!-- Movil -->
+      <div class="marco" data-category="movil">
+        <a href="https://github.com/arturBaigesCortes/laChampionsDePapel">
+          <img src="img/swordFrame.jpg" alt="App móvil">
+        </a>
+        <p>La champions de papel</p>
+      </div>
+
+
     </div>
-  </div>
-</section>
-
-
+  </section>
+</body>
+</html>
