--- a/certificados.html
+++ b/certificados.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="certificados.css">   
 </head>
 
-
+<a href="index.html" class="btn-volver">⬅ Volver</a>
 
 
 <section id="certificados" class="certificados">
