--- a/habilidades.html
+++ b/habilidades.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="habilidades.css">
 </head>
 
-<a href="Inicio.html" class="btn-volver">⬅ Volver</a>
+<a href="index.html" class="btn-volver">⬅ Volver</a>
 
 <section id="habilidades" class="habilidades">
   <h2>Habilidades</h2>
@@ -96,24 +96,5 @@
   
 
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
