--- a/sobreMi.html
+++ b/sobreMi.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <a href="Inicio.html" class="btn-volver">⬅ Volver</a>
+    <a href="index.html" class="btn-volver">⬅ Volver</a>
 
     <div class="caja-presentacion">
       <h2>Sobre mi</h2>
